Fix: Fix tính năng gửi Email