@@ -1,6 +1,7 @@
 package vn.nguongocso.config;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -19,35 +20,38 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * Configures Spring Security for the application.
  *
- * <p>
- * This configuration enables stateless authentication using JWT,
+ * <p>This configuration enables stateless authentication using JWT,
  * registers the JWT authentication filter, defines endpoint access rules,
- * and exposes security-related beans.
- * </p>
+ * and exposes security-related beans.</p>
  */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
+
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${app.cors.allowed-origins:http://localhost:5173}")
+    private String allowedOrigins;
 
     /**
      * Configures the application's security filter chain.
      *
-     * <p>
-     * This configuration:
+     * <p>This configuration:
      * <ul>
-     * <li>Disables CSRF protection.</li>
-     * <li>Uses stateless session management.</li>
-     * <li>Allows public access to authentication and health endpoints.</li>
-     * <li>Requires authentication for all other requests.</li>
-     * <li>Registers the JWT authentication filter.</li>
+     *     <li>Disables CSRF protection.</li>
+     *     <li>Uses stateless session management.</li>
+     *     <li>Allows public access to authentication and health endpoints.</li>
+     *     <li>Requires authentication for all other requests.</li>
+     *     <li>Registers the JWT authentication filter.</li>
      * </ul>
      *
      * @param http Spring Security HTTP configuration
@@ -61,35 +65,38 @@ public class SecurityConfig {
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/api/v1/auth/login", "/api/v1/public/**", "/actuator/health", "/files/qr/**")
-                        .permitAll()
+                        .requestMatchers("/api/v1/auth/login", "/api/v1/public/**", "/actuator/health", "/files/qr/**").permitAll()
                         .anyRequest().authenticated())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
+    
 
-    /**
-     * Configures CORS settings for the application.
-     *
-     * <p>
-     * This configuration allows requests from specific origins, supports
-     * common HTTP methods, and exposes certain headers.
-     * </p>
-     *
-     * @return configured CORS source
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "http://localhost:5173",
-                "http://localhost:63342",
+        List<String> origins = new ArrayList<>(Arrays.asList(
+                "http://localhost:3000", 
+                "http://localhost:5173", 
+                "http://localhost:63342", 
                 "http://localhost",
                 "http://localhost:5500",
                 "http://127.0.0.1:5500",
                 "http://localhost:5501",
-                "http://127.0.0.1:5501"));
+                "http://127.0.0.1:5501"
+        ));
+
+        if (allowedOrigins != null && !allowedOrigins.isBlank()) {
+            String[] split = allowedOrigins.split(",");
+            for (String o : split) {
+                String trimmed = o.trim();
+                if (!trimmed.isEmpty() && !origins.contains(trimmed)) {
+                    origins.add(trimmed);
+                }
+            }
+        }
+
+        configuration.setAllowedOrigins(origins);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
         configuration.setExposedHeaders(List.of("Authorization", "Content-Disposition"));
@@ -103,10 +110,8 @@ public class SecurityConfig {
     /**
      * Exposes the application's {@link AuthenticationManager}.
      *
-     * <p>
-     * The authentication manager is used by the authentication service
-     * to authenticate user credentials during login.
-     * </p>
+     * <p>The authentication manager is used by the authentication service
+     * to authenticate user credentials during login.</p>
      *
      * @param config authentication configuration
      * @return configured authentication manager
@@ -121,10 +126,8 @@ public class SecurityConfig {
     /**
      * Provides the password encoder used by the application.
      *
-     * <p>
-     * Passwords are hashed using the BCrypt algorithm before being
-     * stored or verified.
-     * </p>
+     * <p>Passwords are hashed using the BCrypt algorithm before being
+     * stored or verified.</p>
      *
      * @return BCrypt password encoder
      */
